test: fix tags header on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -517,7 +517,7 @@ body.nav-opened .site-wrapper {
     height: 55vh;
     margin-bottom: 5rem;
     text-align: center;
-    background: #222 no-repeat center center;
+    background: white;
     background-size: cover;
     overflow: hidden;
 }
